fix: gap item

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -235,7 +235,6 @@
 }
 .catalog__item{
     margin: 0;
-    padding: 0;
     font-weight: 400;
     font-size: 20px;
     line-height: 19px;
@@ -423,6 +422,7 @@
     .catalog__item{
         width: 160px;
         height: 184px;
+        gap: 10px;
     }
   }
   @media screen and (max-width: 390px) {
